Fixed issue where footer would cover table on small screens

--- a/crabstyle.css
+++ b/crabstyle.css
@@ -1,9 +1,12 @@
 body {
-  padding-top: 50px;
-  margin-bottom: 60px;
+	height: 100%;
+}
+.stats {
+  min-height: 100%;
+  height: auto;
+  margin-top: 15px;
 }
 .footer {
-  position: absolute;
   bottom: 0;
   width: 100%;
   height: 60px;
@@ -11,7 +14,4 @@ body {
 }
 .container .text-muted {
   margin: 20px 0;
-}
-.stats {
-  margin-top: 15px;
 }
